More Update NC State

--- a/notebooks/step02_aScrapeEspnBpi.ipynb
+++ b/notebooks/step02_aScrapeEspnBpi.ipynb
@@ -75,9 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Daddy\\AppData\\Local\\Temp\\ipykernel_15236\\2602572809.py:15: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(PATH,options=opt)\n"
+     ]
+    }
+   ],
    "source": [
     "# Scrape ESPN BPI 2023 https://www.espn.com/mens-college-basketball/bpi\n",
     "\n",
@@ -148,12 +157,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f627b94a91bc915482d65575b2ea77ee7c3710ea9aacf075a668e3021bd93680"
+    "hash": "75a0be042a4beffa7bfe652d9ca9055e675071b6b5ebd40357e1d67e4cb4d822"
    }
   }
  },
