--- a/notebooks/step05_FullPredict.ipynb
+++ b/notebooks/step05_FullPredict.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\harmk\\AppData\\Local\\Temp\\ipykernel_17592\\959825959.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\Daddy\\AppData\\Local\\Temp\\ipykernel_12436\\959825959.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  fup = fup[fup['Year']<=2022][fup['Game']>=1]\n"
      ]
     }
@@ -35,29 +35,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009\n"
+      "2015\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\harmk\\AppData\\Local\\Temp\\ipykernel_17592\\3311913900.py:24: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\Daddy\\AppData\\Local\\Temp\\ipykernel_12436\\3311913900.py:24: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  r1p = fup[fup['Year']==py][fup['Round']==1]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1480.0\n"
+     "ename": "ValueError",
+     "evalue": "Must have equal len keys and value when setting with an iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 41\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[39m# Predict Round 2\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m33\u001b[39m,\u001b[39m49\u001b[39m):\n\u001b[1;32m---> 41\u001b[0m     BB\u001b[39m.\u001b[39;49mloc[x,\u001b[39m'\u001b[39;49m\u001b[39mPFSeed\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m<\u001b[39mBB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m],BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m],BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     42\u001b[0m     BB\u001b[39m.\u001b[39mloc[x,\u001b[39m'\u001b[39m\u001b[39mPUSeed\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m>\u001b[39mBB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m],BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m],BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     43\u001b[0m     BB\u001b[39m.\u001b[39mloc[x,\u001b[39m'\u001b[39m\u001b[39mPFTeam\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(np\u001b[39m.\u001b[39mwhere(BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m<\u001b[39mBB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWSeed\u001b[39m\u001b[39m'\u001b[39m],BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWTeam\u001b[39m\u001b[39m'\u001b[39m],BB\u001b[39m.\u001b[39mloc[(x\u001b[39m-\u001b[39m\u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPWTeam\u001b[39m\u001b[39m'\u001b[39m]))\n",
+      "File \u001b[1;32mc:\\Users\\Daddy\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexing.py:818\u001b[0m, in \u001b[0;36m_LocationIndexer.__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m    815\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_valid_setitem_indexer(key)\n\u001b[0;32m    817\u001b[0m iloc \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39miloc\u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39miloc\n\u001b[1;32m--> 818\u001b[0m iloc\u001b[39m.\u001b[39;49m_setitem_with_indexer(indexer, value, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname)\n",
+      "File \u001b[1;32mc:\\Users\\Daddy\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexing.py:1795\u001b[0m, in \u001b[0;36m_iLocIndexer._setitem_with_indexer\u001b[1;34m(self, indexer, value, name)\u001b[0m\n\u001b[0;32m   1792\u001b[0m \u001b[39m# align and set the values\u001b[39;00m\n\u001b[0;32m   1793\u001b[0m \u001b[39mif\u001b[39;00m take_split_path:\n\u001b[0;32m   1794\u001b[0m     \u001b[39m# We have to operate column-wise\u001b[39;00m\n\u001b[1;32m-> 1795\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_setitem_with_indexer_split_path(indexer, value, name)\n\u001b[0;32m   1796\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1797\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_setitem_single_block(indexer, value, name)\n",
+      "File \u001b[1;32mc:\\Users\\Daddy\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexing.py:1850\u001b[0m, in \u001b[0;36m_iLocIndexer._setitem_with_indexer_split_path\u001b[1;34m(self, indexer, value, name)\u001b[0m\n\u001b[0;32m   1845\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(value) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m is_integer(info_axis):\n\u001b[0;32m   1846\u001b[0m         \u001b[39m# This is a case like df.iloc[:3, [1]] = [0]\u001b[39;00m\n\u001b[0;32m   1847\u001b[0m         \u001b[39m#  where we treat as df.iloc[:3, 1] = 0\u001b[39;00m\n\u001b[0;32m   1848\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_setitem_with_indexer((pi, info_axis[\u001b[39m0\u001b[39m]), value[\u001b[39m0\u001b[39m])\n\u001b[1;32m-> 1850\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1851\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mMust have equal len keys and value \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1852\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mwhen setting with an iterable\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1853\u001b[0m     )\n\u001b[0;32m   1855\u001b[0m \u001b[39melif\u001b[39;00m lplane_indexer \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mlen\u001b[39m(value) \u001b[39m==\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39mindex):\n\u001b[0;32m   1856\u001b[0m     \u001b[39m# We get here in one case via .loc with a all-False mask\u001b[39;00m\n\u001b[0;32m   1857\u001b[0m     \u001b[39mpass\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: Must have equal len keys and value when setting with an iterable"
      ]
     }
    ],
@@ -221,12 +228,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f627b94a91bc915482d65575b2ea77ee7c3710ea9aacf075a668e3021bd93680"
+    "hash": "75a0be042a4beffa7bfe652d9ca9055e675071b6b5ebd40357e1d67e4cb4d822"
    }
   }
  },
