--- a/notebooks/step04_aCombine.ipynb
+++ b/notebooks/step04_aCombine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "['South Carolina Upstate Spartans']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "[]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "[]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,20 +171,13 @@
     "df = ufs.add(cs, fill_value=0).fillna(0).astype(int)\n",
     "nos = df.max().max()\n",
     "df['Exp Wins'] = (df.sum(axis=1)-nos)/nos\n",
-    "df.to_csv('step04_SeedHistory.csv',index=False) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df.to_csv('step04_SeedHistory.csv',index=False) \n",
     "#Build PASE\n",
     "\n",
     "# table of wins\n",
     "fw = pd.crosstab(index=AG['AFTeam'],columns=AG['Year'])\n",
     "uw = pd.crosstab(index=AG['AUTeam'],columns=AG['Year'])\n",
+    "\n",
     "cw = fw.add(uw, fill_value=0).fillna(0).astype(int) - 1\n",
     "cw = cw.replace(-1, '')\n",
     "\n",
@@ -192,6 +185,7 @@
     "AG1 = AG[AG['Round']=='1']\n",
     "fs = AG1.pivot(index='AFTeam', columns='Year', values = 'AFSeed').fillna(0).astype(int)\n",
     "us = AG1.pivot(index='AUTeam', columns='Year', values = 'AUSeed').fillna(0).astype(int)\n",
+    "\n",
     "cs = fs.add(us, fill_value=0).fillna(0).astype(int)\n",
     "cs = cs.replace(0, '')\n",
     "\n",
@@ -212,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +215,7 @@
        "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
